--- a/css1/thumbrule1/one.css
+++ b/css1/thumbrule1/one.css
@@ -1,3 +1,10 @@
 h1{
     background-color: goldenrod;
 }
+.nayana{
+       background-color: blueviolet;
+}
+#venkat{
+    background-color: red;
+
+}
